# docs/openapi.yml
@@ -146,41 +146,6 @@ paths:
         "200":
           description: OK
 
-  /admin/images/{id}/thumbnail:
-    post:
-      description: Generate a thumbnail for an existing image
-      tags: ["Images"]
-      parameters:
-        - name: id
-          in: path
-          description: ID of the object
-          required: true
-          schema:
-            type: string
-            format: uuid
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                width:
-                  description: Maximum width of the thumbnail
-                  type: integer
-                  example: 300
-                height:
-                  description: Maximum height of the thumbnail
-                  type: integer
-                  example: 200
-                fill:
-                  description: Crop image to fill width and height completely
-                  type: boolean
-                  example: false
-        required: true
-      responses:
-        "200":
-          description: OK
-
   /public/manufacturers:
     get:
       description: List manufacturers
